public/stylesheets/style.css
:root {
  --nav: #131314;
  --background: #000000;
  --greyFont: #727272;
  --whiteFont: white;
  --lightGrey: lightgrey;
  --stockYellow: rgb(221, 188, 0);
  --mustardYellow: rgb(204, 204, 77);
  --transparentYellow: rgba(221, 188, 0, 0.37);
  --stockGreen: rgb(2, 134, 2);
  --stockRed: rgb(170, 0, 57);
  --darkRed: rgb(65, 2, 2);
}

html {
  font-size: 62.5%;
  font-size: 1rem;
}
* {
  /* box-sizing: border-box; */
  font-family: Helvetica;
  color: white;
}

body {
  background-color: var(--background);
  margin: auto;
}

nav {
  display: flex;
  align-items: center;
  justify-content: right;
  background-color: var(--nav);
  width: 100vw;
  height: 2rem;
  text-align: right;
  position: fixed;
  float: top;
  padding: 1.5rem;
}

.navTitle {
  position: absolute;
  left: 2vw;
  padding: 1rem;
  color: var(--stockYellow);
  font-weight: bold;
}

#loginButton {
  background-color: var(--nav);
  border: 0.2rem solid var(--stockYellow);
  color: var(--stockYellow);
  border-radius: 20rem;
  padding: 0.2em 0.5em;
  font-size: 0.9em;
  font-weight: bold;
}
#loginButton:hover {
  background-color: var(--stockYellow);
  color: black;
  transition: all 0.25s ease-in-out;
}
.navButtons {
  padding: 0 0.5rem;
  color: var(--whiteFont);
}
.navButtons:hover {
  color: white;
  border-bottom: 0.3rem solid var(--stockYellow);
  padding: 0 0.5rem;
  text-decoration: none;
  transition: all 0.2s ease-in-out;
}
.activeNav {
  color: var(--stockYellow);

  font-weight: bold;
  padding: 0 0.5rem;
}

.navUser {
  font-size: 0.7rem;
  color: var(--greyFont);
  /* padding: 0 0.1rem; */
}

.navPadding {
  padding-bottom: 3rem;
}
a {
  text-decoration: none;
}
#watchListContent {
  width: 100vw;
  left: 50vw;
  max-width: 800px;
}
#stockContent {
  display: flex;
  flex-direction: column;
  align-items: center;
}
tr {
  text-align: right;
}
.tickerLeft {
  text-align: center;
  border-right: 0.1rem solid var(--greyFont);
  /* font-size: 1.8rem; */
  font-weight: bold;
}
.ticker {
  padding: 0 0 0 0.5rem;
  color: var(--whiteFont);
  font-weight: bold;
}
.tickerTitle {
  padding: 0 0 0 0.5rem;
  border-right: none;
  font-weight: bold;
}

.ticker:hover {
  color: var(--stockYellow);
  text-decoration: none;
}

table {
  border-collapse: collapse;
}
#stockListTitle {
  border-bottom: 0.1rem solid var(--greyFont);
  color: var(--greyFont);
}
#eachStock {
  border-bottom: 0.1rem solid var(--greyFont);
  width: 95vw;
}
.stockListRight {
  color: var(--whiteFont);
}
.stockRed {
  color: var(--stockRed);
}
.stockGreen {
  color: var(--stockGreen);
}
.tickerForm {
  /* font-size: 2.3rem; */
}
.tickerButton {
  background-color: black;
  border: none;
  width: 100%;
  height: 100%;
}
.tickerButton:hover {
  background-color: var(--stockYellow);
  color: black;
  transition: all 0.2s ease-in-out;
}
#searchForm {
  padding: 0 1rem 0.5rem 0;
  text-align: right;
}
#portfolioForm {
  padding: 2rem 0 1rem 0;
  text-align: center;
}
#search {
  width: 15rem;
  border-radius: 0.5rem;
  font-size: 0.9em;
  background-color: var(--lightGrey);
  color: black;
  outline: 0;
  padding: 0.3rem 1.5rem;
  border: none;
}

.formButton {
  background-color: black;
  border: 0.2rem solid var(--stockYellow);
  color: var(--stockYellow);
  border-radius: 2rem;
  padding: 0.2em 0.5em;
  font-size: 0.9em;
  font-weight: bold;
}
.formButton:hover {
  background-color: var(--stockYellow);
  color: black;
  font-weight: bold;
  transition: all 0.25s ease-in-out;
}

#removeStock {
  background-color: var(--darkRed);
  color: white;
  font-size: 0.7em;
  text-align: center;
  vertical-align: middle;
  border-radius: 2rem;
  padding: 0.2em 0.6em;
  border: none;
}
#removeStock:hover {
  background-color: var(--stockRed);
  transform: scale(1.4);
  transition: all 0.15s ease-in-out;
}

#removeHeader {
  color: black;
}
.removeButtonSlot {
  padding: 0 1rem;
}

#noStock {
  position: absolute;
  top: 40%;
  right: 50%;
  font-size: 2rem;
  transform: translateX(7.5rem);
}

#portfolioTable {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
}
#portfolioMod {
  background: black;
  color: white;
  border: 0.2rem solid var(--stockYellow);
  width: 70vw;
  max-width: 30rem;
  border-radius: 1rem;
  padding: 0.2em 0.5em;
  font-size: 0.7em;
}
#portfolioMod:hover {
  background-color: var(--transparentYellow);
  transform: scale(1.05);
  transition: all 0.1s ease-in-out;
}

#portfolioTitle {
  color: var(--lightGrey);
  padding: 5rem 0 0 0;
  text-align: center;
  font-size: 3.5rem;
}
#listPortfolio {
  font-size: 3rem;
  padding: 0.25rem;
  text-align: center;
}
.portfolioContent {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.holdingsList {
  width: 95vw;
  border-bottom: 0.1rem solid var(--greyFont);
  max-width: 800px;
}
.portfolioList {
  text-align: right;
}
.portfolioListTitle {
  border-bottom: 0.1rem solid var(--greyFont);
}

.portfolioSections {
  display: flex;
  flex-direction: column;
  width: 95vw;
  max-width: 800px;
}

.tickerTransactionUnbold {
  font-weight: normal;
}

@media (min-width: 640px) {
  body {
    font-size: 1.1rem;
  }
  .navButton,
  .activeNav {
    padding: 0 1rem;
  }
  .activeNav:hover {
    padding: 0 1rem;
  }
  #listPortfolio {
    padding: 0.5rem;
  }
  .navUser {
    font-size: 1rem;
    padding: 0 0.5rem;
  }
}

